--- a/docs/Makefile
+++ b/docs/Makefile
@@ -6,10 +6,7 @@ SPHINXOPTS    = -a -E
 SPHINXBUILD   = sphinx-build
 SPHINXPROJ    = PyBar
 SOURCEDIR     = .
-#BUILDDIR      = _build
-BUILDDIR      = ../../sphinxdoc-test-docs
-PDFBUILDDIR   = /tmp
-PDF           = ../manual.pdf
+BUILDDIR      = _build
 
 # Put it first so that "make" without argument is like "make help".
 help:
